--- a/User/pom.xml
+++ b/User/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.BoozeBuddies</groupId>
 	<artifactId>User</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>User</name>
 	<description>User service for Booze Buddies</description>
 
