--- a/Friend/pom.xml
+++ b/Friend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.BoozeBuddies</groupId>
 	<artifactId>Friend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Friend</name>
 	<description>Friend service for BoozeBuddies</description>
 
