--- a/Beer/pom.xml
+++ b/Beer/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.BoozeBuddies</groupId>
 	<artifactId>Beer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Beer</name>
 	<description>Beer service for BoozeBuddies</description>
 
